--- a/BayesianDNABarcodeGap.tex
+++ b/BayesianDNABarcodeGap.tex
@@ -80,9 +80,9 @@ A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ 
 
 \section{Introduction}
 
-The routine use of DNA sequences to support broad evolutionary hypotheses and \\ questions concerning demographic processes, like gene flow and speciation, that have \\ produced a distinctive and measurable pattern of genetic polymorphism in diverse and \\ spatially-distributed taxonomic lineages such as birds, fishes, insects, and arachnids, among other extensively studied groups, took flight in the late 1980s \citep{avise1987intraspecific}. The application of genomic data to applied fields like biodiversity forensics, conservation, and management for the molecular identification of unknown specimen samples came later (\textit{e.g.}, Forensically Informative Nucleotide Sequencing (FINS); \citet{bartlett1992fins}). Since its inception over 20 years ago, DNA barcoding \citep{hebert2003biological, hebert2003barcoding} built significantkly on earlier work and has emerged as a robust method of specimen identification and species discovery across myriad multicellular Eukaryotes which have been sequenced at easily \\ obtained short, standardized gene regions like the cytochrome $c$ oxidase subunit I (5'-COI) mitochondrial locus for animals. However, the success of the single-locus approach, \\ particularly for regulatory and forensic applications, depends crucially on two important factors: (1) the availability of high-quality specimen records found in public reference \\ sequence databases such as the Barcode of Life Data Systems (BOLD;  \\ http://www.barcodinglife.org) \citep{ratnasingham2007bold} and GenBank \\ (https://www.ncbi.nlm.nih.gov/genbank/), and (2) the establishment of a DNA barcode gap --- the notion that the maximum genetic distance observed within species is much smaller than the minimum degree of marker variation found among species \citep{meyer2005dna, meier2008use}. Early work has demonstrated that the presence of a DNA barcode gap hinges strongly on extant levels of species haplotype diversity gauged from comprehensive specimen sampling at wide geographic and ecological scales \citep{bergsten2012effect, candek2015dna}. Despite this, many taxonomic groups lack adequate separation in their pairwise intraspecific and interspecific genetic distances due to varying rates of evolution in both genes and taxa \citep{pentinsaari2016molecular}. Furthermore, it has been well-demonstrated that the presence of a DNA barcode gap becomes less certain with increasing spatial scale of sampling since interspecific distances increase, while intraspecific distances shrink as more closely-related species are sampled \citep{phillips2022lack}. This can pose problems in cases of rare species or monotypic taxa, for instance \citep{ahrens2016rarity} and compromise rapid matching of unknown samples to expertly-validated references, leading to cases of false positives (taxon oversplitting) and false negatives (excessive lumping of taxa) as a result of incomplete lineage sorting, interspecies hybridization, genome introgression, species synonymy, cryptic species diversity, and misidentifications \citep{hubert2015dna, phillips2022lack}.
+The routine use of DNA sequences to support broad evolutionary hypotheses and \\ questions concerning demographic processes, like gene flow and speciation, that have \\ produced a distinctive and measurable pattern of genetic polymorphism in diverse and \\ spatially-distributed taxonomic lineages such as birds, fishes, insects, and arachnids, among other extensively studied groups, took flight in the late 1980s \citep{avise1987intraspecific}. The application of genomic data to applied fields like biodiversity forensics, conservation, and management for the molecular identification of unknown specimen samples came later \\ (\textit{e.g.}, Forensically Informative Nucleotide Sequencing (FINS); \citet{bartlett1992fins}). Since its inception over 20 years ago, DNA barcoding \citep{hebert2003biological, hebert2003barcoding} built  \\ significantly on earlier work and has emerged as a robust method of specimen identification and species discovery across myriad multicellular Eukaryotes which have been sequenced at easily obtained short, standardized gene regions like the cytochrome $c$ oxidase subunit I (5'-COI) mitochondrial locus for animals. However, the success of the single-locus approach, \\ particularly for regulatory and forensic applications, depends crucially on two important factors: (1) the availability of high-quality specimen records found in public reference \\ sequence databases such as the Barcode of Life Data Systems (BOLD;  \\ http://www.barcodinglife.org) \citep{ratnasingham2007bold} and GenBank \\ (https://www.ncbi.nlm.nih.gov/genbank/), and (2) the establishment of a DNA barcode gap --- the notion that the maximum genetic distance observed within species is much smaller than the minimum degree of marker variation found among species \citep{meyer2005dna, meier2008use}. Early work has demonstrated that the presence of a DNA barcode gap hinges strongly on extant levels of species haplotype diversity gauged from comprehensive specimen sampling at wide geographic and ecological scales \citep{bergsten2012effect, candek2015dna}. Despite this, many taxonomic groups lack adequate separation in their pairwise intraspecific and interspecific genetic distances due to varying rates of evolution in both genes and taxa \citep{pentinsaari2016molecular}. Furthermore, it has been well-demonstrated that the presence of a DNA barcode gap becomes less certain with increasing spatial scale of sampling since interspecific distances increase, while intraspecific distances shrink as more closely-related species are sampled \citep{phillips2022lack}. This can pose problems in cases of rare species or monotypic taxa, for instance \citep{ahrens2016rarity} and compromise rapid matching of unknown samples to expertly-validated references, leading to cases of false positives (taxon oversplitting) and false negatives (excessive lumping of taxa) as a result of incomplete lineage sorting, interspecies hybridization, genome introgression, species synonymy, cryptic species diversity, and misidentifications \citep{hubert2015dna, phillips2022lack}.
 
-Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, as most studies rely strongly on heuristic distance-based measures to infer taxonomic identity. Of these studies, few report measures of uncertainty, such as standard errors (SEs) and confidence intervals (CIs), around estimates of intraspecific and interspecific  variation, calling into question the existence of a true species' DNA barcode gap \citep{candek2015dna, phillips2022lack}. To support this notion, novel nonparametric locus- and \\ species-specific metrics based on the multispecies coalescent (MSC) were recently outlined by \citet{phillips2024measure}. Unlike previously proposed MSC algorithmic approaches (of which there are too many to exhaustively list here), which generally assume a strict molecular clock and a simplified model of DNA sequence evolution across closely-related taxa from which an estimated species phylogeny may be constructed (\textit{e.g.}, with or without use of a guide tree) (\textit{e.g.}, \citet{rannala2003bayes, rannala2017efficient, yang2010bayesian, yang2014unguided, yang2017bayesian}), \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) approach is tree-free and does not require judicious parameter setting. The statistics have been shown to hold strong promise for reliable DNA barcode gap assessment when applied to predatory \textit{Agabus}  (Coleoptera: Dytiscidae) diving beetles \citep{phillips2024measure}. Despite their ease of sampling and well-established taxonomy, this group possesses few morphologically-distinct taxonomic characters that readily facilitate their assignment to the species level \citep{bergsten2012effect}. Further, the proposed metrics indicate that sister species pairs from this taxon are often difficult to distinguish on the basis of their DNA barcode sequences \citep{phillips2024measure}. Using sequence data from three mitochondrial cytochrome markers (5'-COI, 3'-COI, and cytochrome $b$ (CYTB)) obtained from BOLD and GenBank, results highlight that DNA barcoding has been a one-sided argument. \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) findings point to the need to balance both the sufficient collection of specimens, as well as the extensive sampling of species: DNA barcode libraries are biased toward the latter \citep{phillips2022lack}. The coalescent \citep{kingman1982coalescent, kingman1982genealogy} encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the most recent common ancestor (MRCA). The estimators from \citet{phillips2024measure} represent a clear improvement over simple, yet arbitrary, distance heuristics such as the 2\% rule noted by \citet{hebert2003biological} and the 10$\times$ rule \citep{hebert2004identification} that form the basis of single-locus species delimation tools like Automatic Barcode Gap Discovery (ABGD) \citep{puillandre2011abgd}, Assemble Species by Automatic Partitioning (ASAP) \citep{puillandre2021asap}, and the Barcode Index Number (BIN) framework \citep{ratnasingham2013bin}. The 2\% rule asserts that DNA sequences differing by at least 2\% at sequenced genomic regions should be expected to originate from different biological species, whereas the 10$\times$ rule suggests that sequences displaying 10 times more genetic variation among species than within taxa is evidence for a distinct evolutionary origin. However, the lack of adoption of an explicit, universally agreed upon, species concept that readily governs lineage formation and evolution necessary to establish rigorous taxon definitions for successful delimitation using these well-known criteria, is missing \citep{rannala2015art}. In addition, the reliance on visualization approaches, such as frequency histograms, dotplots, and quadrant plots to expose DNA barcoding's limitations, has also been criticized \citep{collins2013seven, phillips2022lack}. Up until the work of \cite{phillips2024measure}, the majority of studies (\textit{e.g.}, \citet{young2021macer}) have treated the DNA barcode gap as a binary response. However, given poor sampling depth for most taxa, a Yes/No dichotomy is inherently flawed because it can falsely imply a DNA barcode gap is present for a taxon of interest when in fact no such separation in distances exists. The proposed statistics quantify the extent of asymmetric directionality of proportional distance distribution \\ overlap/separation for species within well-sampled taxonomic genera based on a \\ straightforward distance count, in a similar vein to established measures of statistical \\ similarity such as the Kullback-Leibler (KL) divergence \citep{kullback1951information} and other related statistics of $f$-divergence. The metrics can be employed in a variety of ways, including to validate performance of marker genes for specimen identification to the species level (as in \citet{phillips2024measure}), as well as to assess whether computed values are consistent with population genetic-level parameters like effective population size ($N_e$), mutation rates ($\mu$) and divergence times ($\tau$) for species under study in a statistical phylogeographic setting \citep{knowles2002statistical, mather2019practical}. Early on, DNA barcoding was presumed to only work for reciprocally monophyletic groups and thus concerned itself with terminal branches of generated phylogenies rather than more basal lineages occurring deeper in \\ hypothesized species trees \citep{mutanen2016species}. Furthermore, the occurrence of short branches within resolved phylogenies increases the probability of deep coalescence, clouding species delimitations. As DNA barcoding is a single-locus approach, it is problematic for evolutionarily young taxa, wherein incomplete lineage sorting within gene genealogies is a common phenomenon.  The most promising way forward in this regard seems to be through the use of software such as BPP (Bayesian Phylogenetics and Phylogeography), which permits efficient full Bayesian simulations under various MSC models (\textit{e.g.}, MSC-I (MSC with introgression) or MSC-M (MSC with migration), among others) using MCMC for tree parameter estimation (using the {\tt A00} option, for instance) \citep{flouri2018species}, or PHRAPL (Phylogeographic Inference using Approximate Likelihoods) \citep{jackson2017phrapl}, which employs tractable phylogenetic likelihood calculations. 
+Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, as most studies rely strongly on heuristic distance-based measures to infer taxonomic identity. Of these studies, few report measures of uncertainty, such as standard errors (SEs) and confidence intervals (CIs), around estimates of intraspecific and interspecific  variation, calling into question the existence of a true species' DNA barcode gap \citep{candek2015dna, phillips2022lack}. To support this notion, novel nonparametric locus- and \\ species-specific metrics based on the multispecies coalescent (MSC) were recently outlined by \citet{phillips2024measure}. Unlike previously proposed MSC algorithmic approaches (of which there are too many to exhaustively list here), which generally assume a strict molecular clock and a simplified model of DNA sequence evolution across closely-related taxa from which an estimated species phylogeny may be constructed (\textit{e.g.}, with or without use of a guide tree) (\textit{e.g.}, \citet{rannala2003bayes, rannala2017efficient, yang2010bayesian, yang2014unguided, yang2017bayesian}), \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) approach is tree-free and does not require judicious parameter setting. The statistics have been shown to hold strong promise for reliable DNA barcode gap assessment when applied to predatory \textit{Agabus}  (Coleoptera: Dytiscidae) diving beetles \citep{phillips2024measure}. Despite their ease of sampling and well-established taxonomy, this group possesses few morphologically-distinct taxonomic characters that readily facilitate their assignment to the species level \citep{bergsten2012effect}. Further, the proposed metrics indicate that sister species pairs from this taxon are often difficult to distinguish on the basis of their DNA barcode sequences \citep{phillips2024measure}. Using sequence data from three mitochondrial cytochrome markers (5'-COI, 3'-COI, and cytochrome $b$ (CYTB)) obtained from BOLD and GenBank, results highlight that DNA barcoding has been a one-sided argument. \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) findings point to the need to balance both the sufficient collection of specimens, as well as the extensive sampling of species: DNA barcode libraries are biased toward the latter \citep{phillips2022lack}. The coalescent \citep{kingman1982coalescent, kingman1982genealogy} encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the most recent common ancestor (MRCA). The estimators from \citet{phillips2024measure} represent a clear improvement over simple, yet arbitrary, distance heuristics such as the 2\% rule noted by \citet{hebert2003biological} and the 10$\times$ rule \citep{hebert2004identification} that form the basis of single-locus species delimation tools like Automatic Barcode Gap Discovery (ABGD) \citep{puillandre2011abgd}, Assemble Species by Automatic Partitioning (ASAP) \citep{puillandre2021asap}, and the Barcode Index Number (BIN) framework \citep{ratnasingham2013bin}. The 2\% rule asserts that DNA sequences differing by at least 2\% at sequenced genomic regions should be expected to originate from different biological species, whereas the 10$\times$ rule suggests that sequences displaying 10 times more genetic variation among species than within taxa is evidence for a distinct evolutionary origin. However, the lack of adoption of an explicit, universally agreed upon, species concept that readily governs lineage formation and evolution necessary to establish rigorous taxon definitions for successful delimitation using these well-known criteria, is missing \citep{rannala2015art}. In addition, the reliance on visualization approaches, such as frequency histograms, dotplots, and quadrant plots to expose DNA barcoding's limitations, has also been criticized \\ \citep{collins2013seven, phillips2022lack}. Up until the work of \cite{phillips2024measure}, the majority of studies (\textit{e.g.}, \citet{young2021macer}) have treated the DNA barcode gap as a binary response. However, given poor sampling depth for most taxa, a Yes/No dichotomy is inherently flawed because it can falsely imply a DNA barcode gap is present for a taxon of interest when in fact no such separation in distances exists. The proposed statistics quantify the extent of asymmetric directionality of proportional distance distribution \\ overlap/separation for species within well-sampled taxonomic genera based on a \\ straightforward distance count, in a similar vein to established measures of statistical \\ similarity such as the Kullback-Leibler (KL) divergence \citep{kullback1951information} and other related statistics of $f$-divergence. The metrics can be employed in a variety of ways, including to validate performance of marker genes for specimen identification to the species level (as in \citet{phillips2024measure}), as well as to assess whether computed values are consistent with population genetic-level parameters like effective population size ($N_e$), mutation rates ($\mu$) and divergence times ($\tau$) for species under study in a statistical phylogeographic setting \citep{knowles2002statistical, mather2019practical}. Early on, DNA barcoding was presumed to only work for reciprocally monophyletic groups and thus concerned itself with terminal branches of generated phylogenies rather than more basal lineages occurring deeper in \\ hypothesized species trees \citep{mutanen2016species}. Furthermore, the occurrence of short branches within resolved phylogenies increases the probability of deep coalescence, clouding species delimitations. As DNA barcoding is a single-locus approach, it is problematic for evolutionarily young taxa, wherein incomplete lineage sorting within gene genealogies is a common phenomenon.  The most promising way forward in this regard seems to be through the use of software such as BPP (Bayesian Phylogenetics and Phylogeography), which permits efficient full Bayesian simulations under various MSC models \\ (\textit{e.g.}, MSC-I (MSC with introgression) or MSC-M (MSC with migration), among others) using MCMC for tree parameter estimation (using the {\tt A00} option, for instance) \citep{flouri2018species}, or PHRAPL (Phylogeographic Inference using Approximate Likelihoods) \citep{jackson2017phrapl}, which employs tractable phylogenetic likelihood calculations. 
 
 While introduction of the metrics is a step in the right direction, what appears to be missing is a rigorous statistical treatment of the DNA barcode gap. This includes an unbiased way to compute the statistical accuracy of \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) estimators arising through problems inherent in frequentist maximum likelihood estimation for probability distributions having bounded positive support on the closed unit interval [0, 1]. To this end, here, a Bayesian model of the DNA barcode gap coalescent is introduced to rectify such issues. The model allows accurate estimation of posterior means, posterior standard deviations (SDs), posterior quantiles, and credible intervals (CrIs) for the metrics given datasets of intraspecific and interspecific distances for species of interest.
 
@@ -126,7 +126,7 @@ F_X(t) = \mathbb{P}(X \leq t) = 1 - \mathbb{P}(X > t).
 \noindent Rearranging Equation (5) gives
 
 \begin{align}
-\mathbb{P}(X > t) = 1 - F_X(t),
+\mathbb{P}(X > t) = 1 - F_X(t) = 1 - \mathbb{P}(X \leq t) ,
 \end{align}
 
 \noindent from which it follows that
@@ -152,7 +152,7 @@ q'_x &=  \mathbb{P}(d'_{XY} \leq b) \notag \\
 
 \noindent From this, it can be seen that $\hat{F}_{d_{ij}}(b) = 1$ in Equations (8) and (10). Given $n$ \\ increasing-ordered data points, the (discrete) ECDF, $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$, comprises a step function having jump discontinuities of size $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of weight $\frac{i}{n}$ with duplicate observations), where $\mathds{1}(x)$ is the indicator function. Note, $\mathbb{P}(X = t) \neq 0$. Equations (8)-(11) clearly demonstrate the asymmetric directionality of the proposed metrics. Furthermore, calculation of the DNA barcode gap estimators is convenient as they implicitly account for total distribution area (including overlap).
 
-A major criticism of large sample (frequentist) theory is that it relies on asymptotic properties of the MLE (whose population parameter is assumed to be a fixed but unknown quantity), such as estimator normality and consistency as the sample size approaches infinity. This problem is especially pronounced in the case of binomial proportions \citep{newcombe1998confidence}. The estimated Wald standard error (SE) of the sample proportion, is given by $\widehat{SE[\hat{p}}] = \sqrt{\frac{\hat{p}(1 - \hat{p})}{n}}$, where $\hat{p} = \frac{Y}{n}$ is the MLE, $Y$ is the total number of successes ($Y = \sum_{i=1}^n{y_i}$) and $n$ is the total number of trials (\textit{i.e.}, sample size). However, the above formula for the standard error is problematic for several reasons. First, it is a Normal approximation which makes use of the central limit theorem (CLT); thus, large sample sizes are required for reliable estimation. When few observations are available, SEs will be large and inaccurate, leading to low statistical power to detect a true DNA barcode gap when one actually exists. Further, resulting interval estimates could span values less than zero or greater than one, or have zero width, which is practically meaningless. Second, when proportions are exactly equal to zero or one, resulting SEs will be exactly zero, rendering $\widehat{SE[\hat{p}}]$ given above completely useless. In the context of the proposed DNA barcode gap metrics, values obtained at the boundaries of their support are often encountered. Therefore, reliable calculation of SEs is not feasible. Given the importance of sufficient sampling of species genetic diversity for DNA barcoding initiatives, a different statistical estimation approach is necessary. 
+A major criticism of large sample (frequentist) theory is that it relies on asymptotic properties of the MLE (whose population parameter is assumed to be a fixed but unknown quantity), such as estimator normality and consistency as the sample size approaches infinity. This problem is especially pronounced in the case of binomial proportions \citep{newcombe1998confidence}. The estimated Wald standard error (SE) of the sample proportion, is given by \\ $\widehat{SE[\hat{p}}] = \sqrt{\frac{\hat{p}(1 - \hat{p})}{n}}$, where $\hat{p} = \frac{Y}{n}$ is the MLE, $Y$ is the total number of successes ($Y = \sum_{i=1}^n{y_i}$) and $n$ is the total number of trials (\textit{i.e.}, sample size). However, the above formula for the standard error is problematic for several reasons. First, it is a Normal approximation which makes use of the central limit theorem (CLT); thus, large sample sizes are required for reliable estimation. When few observations are available, SEs will be large and inaccurate, leading to low statistical power to detect a true DNA barcode gap when one actually exists. Further, resulting interval estimates could span values less than zero or greater than one, or have zero width, which is practically meaningless. Second, when proportions are exactly equal to zero or one, resulting SEs will be exactly zero, rendering $\widehat{SE[\hat{p}}]$ given above completely useless. In the context of the proposed DNA barcode gap metrics, values obtained at the boundaries of their support are often encountered. Therefore, reliable calculation of SEs is not feasible. Given the importance of sufficient sampling of species genetic diversity for DNA barcoding initiatives, a different statistical estimation approach is necessary. 
 
 Bayesian inference offers a natural path forward in this regard since it allows for \\ straightforward specification of prior beliefs concerning unknown model parameters and permits the seamless propagation of uncertainty, when data are lacking and sample sizes are small, through integration with the likelihood function associated with true generating processes. The posterior distribution ($\pi(\theta | Y)$) is given by Bayes' theorem up to a \\ proportionality $\pi(\theta | Y) \propto \pi(Y | \theta)\pi(\theta)$, where $\theta$ are unobserved parameters, $Y$ are known data, $\pi(Y | \theta)$ is the likelihood, and $\pi(\theta)$ is the prior.  As a consequence, because parameters are treated as random variables, Bayesian models are much more flexible and generally more easily interpretable compared to frequentist approaches. Under the Bayesian paradigm, entire posterior distributions, along with their summaries (\textit{e.g.}, CrIs) are outputted, rather than just long run behaviour reflected in sampling distributions, p-values, and CIs as in the frequentist case, thus allowing direct probability statements to be made. 
 
@@ -173,9 +173,9 @@ y^{'}_\mathrm{lwr} &\sim \mathrm{Binomial}(N, p^{'}_\mathrm{lwr}) \\
 
 \noindent Note that $p_x$, $q_x$, $p^{'}_x$, and $q^{'}_x$ in Equations (1)-(4) are denoted $p_\mathrm{lwr}$, $p_\mathrm{upr}$, $p^{'}_\mathrm{lwr}$, $q^{'}_\mathrm{upr}$ within Equation (12) for distinction between MLEs and Bayesian posterior estimates. The above statistical theory and derivations lay a good foundation for the remainder of this paper.
 
-The proposed model is inherently vectorized to allow processing of multiple species datasets simultaneously. Model fitting was achieved using the Stan probabilistic \\ programming language \citep{carpenter2017stan} framework for Hamiltonian Monte Carlo (HMC) via the No-U-Turn Sampler (NUTS) sampling algorithm \citep{hoffman2014no} through the {\tt rstan} R package (version 2.32.6) \citep{stan2023rstan} in R (version 4.4.1) \citep{rcore2024language}. Four Markov chains were run for 2000 iterations each in parallel across four cores with random parameter initializations. Within each chain, a total of 1000 samples was discarded as warmup (\textit{i.e.}, burnin) to reduce dependence on starting conditions and to ensure posterior samples are reflective of the equilibrium distribution. Further, 1000 post-warmup draws were utilized per chain. Because HMC/NUTS results in dependent samples that are minimally autocorrelated, chain thinning is not required. Each of these reflect default Markov Chain Monte Carlo (MCMC) settings in Stan to control both bias and variance in the resulting draws. All analyses in the present work were carried out on a 2023 Apple MacBook Pro with M2 chip and 16 GB RAM running macOS Ventura 13.2. A random seed was set to ensure reproducibility of model results. Outputted estimates were rounded to three decimal places of precision. Posterior distributions were visualized as KDE plots using the {\tt ggplot2} R package (version 3.5.1) \citep{wickham2016ggplot2} with the default Gaussian kernel and optimal smoothness selection. To successfully run the Stan program, end users must have installed an appropriate compiler (such as GCC or Clang) which is compatible with their operating system, such as macOS.
+The proposed model is inherently vectorized to allow processing of multiple species datasets simultaneously. Model fitting was achieved using the Stan probabilistic \\ programming language \citep{carpenter2017stan} framework for Hamiltonian Monte Carlo (HMC) via the No-U-Turn Sampler (NUTS) sampling algorithm \citep{hoffman2014no} through the {\tt rstan} R package (version 2.32.6) \citep{stan2023rstan} in R (version 4.4.1) \citep{rcore2024language}. Four Markov chains were run for 2000 iterations each in parallel across four cores with random parameter initializations. Within each chain, a total of 1000 samples was discarded as warmup (\textit{i.e.}, burnin) to reduce dependence on starting conditions and to ensure posterior samples are reflective of the equilibrium distribution. Further, 1000 post-warmup draws were utilized per chain during the sampling phase. Because HMC/NUTS results in dependent samples that are minimally autocorrelated, chain thinning is not required. Each of these tuning parameters reflect default Markov Chain Monte Carlo (MCMC) settings in Stan to control both bias and variance in the resulting draws. All analyses in the present work were carried out on a 2023 Apple MacBook Pro with M2 chip and 16 GB RAM running macOS Ventura 13.2. A random seed was set to ensure reproducibility of model results. Outputted estimates were rounded to three decimal places of precision. Posterior distributions were visualized as KDE plots using the {\tt ggplot2} R package (version 3.5.1) \citep{wickham2016ggplot2} with the default Gaussian kernel and optimal smoothness selection. To successfully run the Stan program, end users must have installed an appropriate compiler (such as GCC or Clang) which is compatible with their operating system, such as macOS.
 
-Convergence was assessed both visually and quantitatively as follows: (1) through \\ examining parameter traceplots, which depict the trajectory of accepted MCMC draws as a function of the number of iterations, (2) through monitoring the Gelman-Rubin $\hat{R}$ statistic \citep{gelman1992iterative, vehtari2017rank}, which measures the concordance of within-chain \textit{versus} between-chain variance, and (3) through calculating the effective sample size (ESS) for each parameter, which quantifies the number of independent samples generated Markov chains are equivalent to. Mixing of chains was deemed sufficient when traceplots looked like ``fuzzy caterpillars", $\hat{R} < 1.01$, and effective sample sizes were reasonably large \citep{gelman2020bayesian}.
+Convergence was assessed both visually and quantitatively as follows: (1) through \\ examining parameter traceplots, which depict the trajectory of accepted MCMC draws as a function of the number of iterations, (2) through monitoring the Gelman-Rubin potential scale reduction factor statistic   ($\hat{R}$)  \citep{gelman1992iterative, vehtari2017rank}, which measures the concordance of within-chain \textit{versus} between-chain variance, and (3) through calculating the effective sample size (ESS) for each parameter, which quantifies the number of independent samples generated Markov chains are equivalent to. Mixing of chains was deemed sufficient when traceplots looked like ``fuzzy caterpillars", $\hat{R} < 1.01$, and effective sample sizes were reasonably large \citep{gelman2020bayesian}.
 After sampling, a number of summary quantities were reported, including posterior means, posterior SDs, and posterior quantiles from which 95\% CrIs could be computed to make probabilistic inferences concerning true population parameters. To validate the overall correctness of the proposed statistical model given by Equation (12), as a means of comparison, posterior predictive checks (PPCs) were also employed to generate binomial random variates in the form of counts from the posterior predictive distribution; that is $\underaccent{\bar}{\gamma} = \{Np_x, Mq_x, Np^{'}_x, Cq^{'}_x\}$ to verify that the model adequately captures relevant features of the observed data. The proposed Bayesian model outlined here has a straightforward interpretation (\textbf{Table 1}). 
 
 \begin{table}[htbp]
@@ -200,7 +200,7 @@ After sampling, a number of summary quantities were reported, including posterio
 
 \section{Results and Discussion}
 
-The \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure} is revisited herein. \\ Briefly, using the R package {\tt MACER} \citep{young2021macer}, DNA sequences were downloaded from GenBank and BOLD and processed to obtain a 343 bp FASTA alignment representing 46 unique haplotypes. Genetc distances were calculated using uncorrected p-distances. Specifically, the proposed Bayesian model is demonstrated on the species \textit{A. bipustulatus} and \textit{A. nevadensis}, since these taxa were the sole representatives for this locus, with the most and the least specimen records, respectively ($N$ = 701 and $N$ = 2) across all three assessed molecular markers. Further, \textit{A. bipustulatus} comprised 46 total haplotypes, whereas \textit{A. nevadensis} possessed two haplotypes. Note, DNA barcode gap estimation is only possible for species having at least two specimen records. This dataset is a prime illustrative example highlighting the issue of inadequate taxon sampling, which arises frequently in large-scale phylogenetic and phylogeographic studies, in several respects. First, from a statistical \\ viewpoint, sample sizes reflect extremes in reliable parameter estimation. Second, from a DNA barcoding perspective, \textit{Agabus} comprises about 200 extant species according to the Global Biodiversity Information Facility (GBIF) (https://www.gbif.org); yet, due to the level of convenience sampling inherent in taxonomic collection efforts for this genus, adequate representation of species and genetic diversity is far from complete. 
+The \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure} is revisited herein. \\ Briefly, using the R package {\tt MACER} \citep{young2021macer}, DNA sequences were downloaded from GenBank and BOLD and processed to obtain a 343 bp FASTA alignment representing 46 unique haplotypes. Genetc distances were calculated using uncorrected p-distances. Specifically, the proposed Bayesian model is demonstrated on the species \textit{A. bipustulatus} and \textit{A. nevadensis}, since these taxa were the sole representatives for this locus, with the most and the least specimen records, respectively ($N$ = 701 and $N$ = 2) across all three assessed molecular markers. Further, \textit{A. bipustulatus} comprised 46 total haplotypes, whereas \textit{A. nevadensis} possessed two haplotypes. Note, DNA barcode gap estimation is only possible for species having at least two specimen records. This dataset is a prime illustrative example highlighting the issue of inadequate taxon sampling, which arises frequently in large-scale phylogenetic and phylogeographic studies, in several respects. First, from a statistical \\ viewpoint, sample sizes reflect extremes in reliable parameter estimation. Second, from a DNA barcoding perspective, \textit{Agabus} currently comprises about 200 extant species according to the Global Biodiversity Information Facility (GBIF) (https://www.gbif.org); yet, due to the level of convenience sampling inherent in taxonomic collection efforts for this genus, adequate representation of species and genetic diversity is far from complete. 
 
 MCMC parameter traceplots showed rapid mixing of chains to the stationary distribution (\textbf{Supplementary Figure 1}). Further, all $\hat{R}$ and ESS values (not shown) were close to their recommended cutoffs of one and thousands of samples, respectively, indicating chains are both well-mixed and have converged to the posterior distribution.  
 
